--- a/examples/_gomplates/argocd-apps.tmpl
+++ b/examples/_gomplates/argocd-apps.tmpl
@@ -160,4 +160,33 @@ spec:
         maxDuration: 3m0s
   destination:
     server: {{ (index (ds "tf") "argocd-destination-server").value }}
-    namespace: kube-system  
+    namespace: kube-system
+---
+apiVersion: argoproj.io/v1alpha1
+kind: Application
+metadata:
+  name: {{ (ds "tf").eks.value.eks.id }}-gloo-crds
+  namespace: argocd
+  labels:
+    solo.io/gloo-component: gloo-platform
+spec:
+  project: default
+  source:
+    chart: gloo-platform-crds
+    repoURL:  {{ (ds "env").gloo.repo }}
+    targetRevision: {{ (ds "env").gloo.version }}
+  syncPolicy:
+    automated:
+      prune: true
+      selfHeal: true 
+    syncOptions:
+    - CreateNamespace=true
+    retry:
+      limit: 10
+      backoff:
+        duration: 5s
+        factor: 2
+        maxDuration: 3m0s
+  destination:
+    server: {{ (index (ds "tf") "argocd-destination-server").value }}
+    namespace: gloo-mesh
